--- a/views/customer.css
+++ b/views/customer.css
@@ -48,7 +48,6 @@ body {
   height: 100%;
   background-color: #2e2e2e;
   font-family: Georgia, serif;
-outline: none;
 }
 body {
   color: #ffffff;
@@ -67,7 +66,6 @@ body {
 }
 .site-wrapper-inner {
   display: table-cell;
-  vertical-align: top;
 }
 .cover-container {
   margin-right: auto;
@@ -83,12 +81,15 @@ body {
 /*
  * Header
  */
- /*
 .masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  font-size: 34px !important;
 }
-*/
+.masthead-brand > a:hover {
+  background-color: transparent;
+  color: #e77e00;
+}
 .masthead-nav > li {
   display: inline-block;
 }
@@ -98,36 +99,35 @@ body {
 .masthead-nav > li > a {
   padding-right: 0;
   padding-left: 0;
-  font-size: 16px;
+  margin-top: -12px;
+  margin-bottom: -12px;
+  font-size: 34px;
   color: #ffffff; /* IE8 proofing */
   color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
 }
 .masthead-nav > li > a:hover {
   background-color: transparent;
-  border-bottom-color: #e77e00;
+  color: #e77e00;
 }
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
 .masthead-nav > .active > a:focus {
   color: #ffffff;
-  border-bottom-color: #ffffff;
 }
 .masthead-nav > li > a:focus, 
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:focus {
-  font-size: 16px;
   background-color: transparent;
-  border-bottom-color: none;
 }
 @media (min-width: 768px) {
-/*
+
   .masthead-brand {
     float: left;
+    font-size: 14px;
   }
-*/
+
   .masthead-nav {
-    float: center;
+    float: right;
   }
 }
 
@@ -188,21 +188,10 @@ body {
     width: 700px;
   }
 }
-
-.logo {
-    display: inline-block;
-    padding: 15px;
-    line-height: 85%;
-
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-
-    background-color: #e77e00;
-    color: #0069e7;
-    text-align: center;
-    font-style: italic;
+#nav-search {
+    padding-right: 90px;
+    vertical-align: top;
 }
-
 /*-- modal styling -----------------------------------------------------------*/
 
 .modal-dialog {
@@ -216,6 +205,9 @@ body {
 .modal-body {
   text-align: justify;
   font-size: 16px;
+}
+.modal-footer {
+  text-align: left;
 }
 .modal.fade.in ~ .modal-backdrop.fade.in {
   background-color: #0a0a0a;
@@ -234,7 +226,9 @@ body {
   color: #e77e00;
   opacity: 1;
 }
-
+#warning {
+  background-color: #bd362f;
+}
 /*-- button styling ----------------------------------------------------------*/
 
 .btn-default {
@@ -293,7 +287,14 @@ body {
   border-color: #FF0000;
   box-shadow: inset 0px 0px 3px 3px #e77e00, 0px 0px 3px 3px #676767;
 }
-
+#list {
+  background-color: #2e2e2e !important;
+  color: #ffffff !important;
+}
+#list2 {
+  background-color: #676767 !important;
+  color: #ffffff !important;
+}
 /*-- placeholder styling (input fields) --------------------------------------*/
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
