--- a/views/guest.html
+++ b/views/guest.html
@@ -46,7 +46,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- our CSS -->
-    <link rel = "stylesheet" href = "index.css">
+    <link rel = "stylesheet" href = "guest.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -163,154 +163,6 @@
       </div>
     </div><!-- close modal -->
 
-  <!-- Modal - About -->
-    <div class = "modal" id = "about" tabindex = "-1" role = "dialog" aria-labelledby = "about"><!-- open modal -->
-      <div class = "modal-dialog" role = "document">
-        <div class = "modal-content">
-
-          <div class = "modal-header"><!-- open modal-head -->
-
-            <button type = "button" class = "close" data-dismiss = "modal" aria-label = "Close"><span aria-hidden = "true">&times;</span></button>
-            <h4 class = "modal-title logo" id = "myModalLabel">
-              cheap<sub>LIKE</sub>us<br/><br/>
-            </h4>
-
-          </div><!-- close modal-head -->
-
-          <div class = "modal-body"><!-- open modal-body -->
-                        
-            <div>
-              <p class = "about_text">
-              <br/>
-                This is a project for University of Florida's Fall 2015 CIS4301:
-                Information and Database Systems course. The goal of this project 
-                is to develop a simple online store web app incorporating 
-                the database management skills learned in the course as well as web 
-                development skill learned during independent study.
-                <br/>
-              </p>
-            </div>
-
-          </div><!-- close modal-body -->
-
-        </div>
-      </div>
-    </div><!-- close modal -->
-
-  <!-- Modal - Contact -->
-    <div class = "modal" id = "contact" tabindex = "-1" role = "dialog" aria-labelledby = "contact"><!-- open modal -->
-      <div class = "modal-dialog" role = "document">
-        <div class = "modal-content">
-
-          <div class = "modal-header"><!-- open modal-head -->
-
-            <button type = "button" class = "close" data-dismiss = "modal" aria-label = "Close"><span aria-hidden = "true">&times;</span></button>
-            <h4 class = "modal-title" id = "myModalLabel">
-              Contact
-            </h4>
-
-          </div><!-- close modal-head -->
-
-          <div class = "modal-body"><!-- open modal-body -->                     
-            <div class = "panel-group" id = "accordion" role = "tablist" aria-multiselectable = "true">  
-              
-              <div class = "panel panel-default">
-                <div class = "panel-heading" role = "tab" id = "headingOne">
-                  <button class = "btn btn-default btn-block btn-lg collapsed btn-spc" data-toggle = "collapse" data-parent = "#accordion" href = "#Phillip_Smith" aria-pressed = "false" aria-expanded = "false" aria-controls = "Phillip_Smith">
-                    <h4 class = "panel-title">
-                      Phillip Smith
-                    </h4>
-                  </button>
-                </div>
-
-                <div id = "Phillip_Smith" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingOne">
-                  <div class = "list-group">
-    
-                    <ul class = "list-group">
-                      <li class = "list-group-item">
-                        Undergraduate, UF-CISE
-                      </li>
-
-                      <li class = "list-group-item">
-                        smith.phillip.m@ufl.edu
-                      </li>
-
-                      <li class = "list-group-item">
-                        Front-end development, some back-end, general design
-                      </li>
-                    </ul>
-
-                  </div>
-                </div>
-              </div>
-
-              <div class = "panel panel-default">
-                <div class = "panel-heading" role = "tab" id = "headingTwo">
-                  <button class = "btn btn-default btn-block btn-lg collapsed btn-spc" data-trigger = "focus" data-toggle = "collapse" data-parent = "#accordion" href = "#Nicolas_Fry" aria-pressed = "false" aria-expanded = "false" aria-controls = "Nicolas_Fry">
-                    <h4 class = "panel-title">
-                      Nicolas Fry
-                    </h4>
-                  </button>
-                </div>
-
-                <div id = "Nicolas_Fry" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingTwo">
-                  <div class = "list-group">
-
-                    <ul class = "list-group">
-                      <li class = "list-group-item">
-                        Undergraduate, UF-CISE
-                      </li>
-
-                      <li class = "list-group-item">
-                        email@email.com
-                      </li>
-
-                      <li class = "list-group-item">
-                        Back-end development, some front-end
-                      </li>
-                    </ul>
-
-                  </div>
-                </div>
-              </div>
-<!--
-              <div class = "panel panel-default">
-                <div class = "panel-heading" role = "tab" id = "headingThree">
-                  <button class = "btn btn-default btn-block btn-lg collapsed btn-spc" data-toggle = "collapse" data-parent = "#accordion" href = "#George_Angeles" aria-pressed = "false" aria-expanded = "false" aria-controls = "George_Angeles">
-                    <h4 class = "panel-title">
-                      George Angeles
-                    </h4>
-                  </button>
-                </div>
-
-                <div id = "George_Angeles" class = "panel-collapse collapse" role = "tabpanel" aria-labelledby = "headingThree">
-                  <div class = "list-group">
-
-                    <ul class = "list-group">
-                      <li class = "list-group-item">
-                        BS Graphic Design - Some University
-                      </li>
-
-                      <li class = "list-group-item">
-                        email@email.com
-                      </li>
-
-                      <li class = "list-group-item">
-                        Contribution: Favicon, general graphic design
-                      </li>
-                    </ul>
-
-                  </div>
-                </div>
--->
-              </div>
-            </div>
-          </div><!-- close modal-body -->
-
-        </div>
-      </div>
-    </div><!-- close modal -->
-
 <!-- Cover -------------------------------------------------------------------->
 
     <div class = "site-wrapper">
@@ -321,34 +173,39 @@
 
           <div class = "masthead clearfix">
             <div class = "inner">
-<!--              
-              <h3 class="masthead-brand logo">
-                cheap<sub>LIKE</sub>us<br/><br/>
+           
+              <h3 class = "masthead-brand">
+                <a href = "http://walkhard.me/">
+                  <span class="glyphicon glyphicon-home icon" aria-hidden="true"></span>
+                </a>
               </h3>
--->
+
               <nav>
                 <ul class = "nav masthead-nav">
+                  <li class = "nav-search">
+                    <div><!-- open search container -->
+                      <div class = "input-group"><!-- open search field -->
+                        <input type = "text" class = "form-control" placeholder = "Search for...">
+
+                        <span class = "input-group-btn">
+                          <button class = "btn btn-default" type = "button">
+                              <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                          </button>
+                        </span>
+
+                      </div><!-- close search field -->
+                    </div><!-- close search container -->
+                  </li>
+
                   <li>
                     <a href = "#" data-toggle = "modal" data-target = "#sign_in">
-                      Sign-In
+                      <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                     </a>
                   </li>
 
                   <li>
                     <a href = "#" data-toggle = "modal" data-target = "#sign_up">
-                      Sign-up
-                    </a>
-                  </li>
-
-                  <li>
-                    <a href = "#" data-toggle = "modal" data-target = "#about">
-                      About
-                    </a>
-                  </li>
-
-                  <li>
-                    <a href = "#" data-toggle = "modal" data-target = "#contact">
-                      Contact
+                      <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                     </a>
                   </li>
                 </ul>
@@ -358,26 +215,139 @@
           </div>
 
           <div class = "inner cover">
+                    <ul class = "list-group">
+                                          <li class = "list-group-item" id = "list">
+                        1
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
 
-            <h1 class = "cover-heading logo">
-              cheap<sub>LIKE</sub>us<br/><br/>
-            </h1>
-            
-            <br/><br/>
+                      <li class = "list-group-item" id = "list2">
+                        3
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+                    
+                      <li class = "list-group-item" id = "list">
+                        4
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
 
-            <div><!-- open search container -->
-              <div class = "input-group"><!-- open search field -->
-                <input type = "text" class = "form-control input-lg" placeholder = "Search for...">
+                      <li class = "list-group-item" id = "list2">
+                        5
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
 
-                <span class = "input-group-btn">
-                  <button class = "btn btn-default btn-lg" type = "button">
-                    <b>Go!</b>
-                  </button>
-                </span>
+                      <li class = "list-group-item" id = "list">
+                        6
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+                      <li class = "list-group-item" id = "list2">
+                        7
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
 
-              </div><!-- close search field -->
-            </div><!-- close search container -->
+                      <li class = "list-group-item" id = "list">
+                        8
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+
+                      <li class = "list-group-item" id = "list2">
+                        9
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+                    
+                      <li class = "list-group-item" id = "list">
+                        10
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+
+                      <li class = "list-group-item" id = "list2">
+                        11
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+
+                      <li class = "list-group-item" id = "list">
+                       12
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+                      <li class = "list-group-item" id = "list2">
+                        13
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+
+                      <li class = "list-group-item" id = "list">
+                        14
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+
+                      <li class = "list-group-item" id = "list2">
+                        15
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+                    
+                      <li class = "list-group-item" id = "list">
+                        16
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+
+                      <li class = "list-group-item" id = "list2">
+                        17
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+
+                      <li class = "list-group-item" id = "list">
+                        18
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+                      <li class = "list-group-item" id = "list2">
+                        19
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+                      <li class = "list-group-item" id = "list">
+                        20
+            <button class = "btn btn-default close" type = "button">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            </button>
+                      </li>
+
+                    </ul>
           </div>
+
           <div class = "mastfoot">
             <div class = "inner">
               <p>
@@ -416,7 +386,7 @@ models as well as the development of a database application.">
     <!-- Latest compiled and minified JavaScript -->
     <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- Project JS -->
-    <script src = "script" type = "index.js"></script>
+    <script src = "script" type = "guest.js"></script>
 
   </body>
 
