--- a/views/index.ejs
+++ b/views/index.ejs
@@ -366,15 +366,17 @@
             <br/><br/>
 
             <div><!-- open search container -->
+            <form role = "form" action = "req/guestItems" method = "post">
               <div class = "input-group"><!-- open search field -->
-                <input type = "text" class = "form-control input-lg" placeholder = "Search for...">
-
+                <input type = "search" name = "search" class = "form-control input-lg" placeholder = "Search for...">
                 <span class = "input-group-btn">
-                  <button class = "btn btn-default btn-lg" type = "button">
+                  <!-- <button type = "submit" class = "btn btn-default btn-block btn-lg" value = "Send"> -->
+
+                  <button type = "submit" class = "btn btn-default btn-lg" value="Send" >
                     <b>Go!</b>
                   </button>
                 </span>
-
+            </form>
               </div><!-- close search field -->
             </div><!-- close search container -->
           </div>
