FINALLY EJS IS COOPERATINGgit status

--- a/PARTIALS/modal_create_account.ejs
+++ b/PARTIALS/modal_create_account.ejs
@@ -14,7 +14,7 @@
         <form role = "form" action = "/createUser" method = "post"><!-- open form -->
 
           <div class = "form-group"><!-- password field -->
-            <input type = "name" name = "usersname" id = "name" class = "form-control input-lg" placeholder = "Name i.e. John Doe">
+            <input type = "usersname" name = "usersname" id = "name" class = "form-control input-lg" placeholder = "Name i.e. John Doe">
           </div><!-- password field -->
 
           <br/><br/>
