--- a/views/guest.ejs
+++ b/views/guest.ejs
@@ -215,137 +215,13 @@
           </div>
 
           <div class = "inner cover">
-                    <ul class = "list-group">
-                                          <li class = "list-group-item" id = "list">
-                        1
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list2">
-                        3
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-                    
-                      <li class = "list-group-item" id = "list">
-                        4
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list2">
-                        5
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list">
-                        6
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-                      <li class = "list-group-item" id = "list2">
-                        7
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list">
-                        8
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list2">
-                        9
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-                    
-                      <li class = "list-group-item" id = "list">
-                        10
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list2">
-                        11
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list">
-                       12
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-                      <li class = "list-group-item" id = "list2">
-                        13
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list">
-                        14
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list2">
-                        15
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-                    
-                      <li class = "list-group-item" id = "list">
-                        16
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list2">
-                        17
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                      <li class = "list-group-item" id = "list">
-                        18
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-                      <li class = "list-group-item" id = "list2">
-                        19
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-                      <li class = "list-group-item" id = "list">
-                        20
-            <button class = "btn btn-default close" type = "button">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            </button>
-                      </li>
-
-                    </ul>
+                    <% data.forEach(function(row){ %>
+                      <%= row.ProductID %>
+                      <%= row.name %>
+                      <%= row.price %>
+                      <%= row.stockquantity %>
+                      <%= row.description %>
+                      <% }) %>
           </div>
 
           <div class = "mastfoot">
