Updated several of the front end pieces

--- a/PARTIALS/footer.ejs
+++ b/PARTIALS/footer.ejs
@@ -1,25 +1,27 @@
-<p>
-  Project for 
+<div class = "inner">
+  <p>
+    Project for 
 
-    <a href = "#" data-toggle = "tooltip" data-placement = "top" 
-       title = "Credits: 3; Prereq: COP 3504, or COP 3503 and COT 3100.
-The first part of a two-course sequence that studies the essential 
-concepts, principles and techniques of modern database systems. 
-Topics include modeling and querying of data using conceptual data 
-models as well as the development of a database application.">
-      <i>Database and Information Systems</i>
-    </a>
-    &nbsp&nbsp
-    <a href = "http://www.ufl.edu/" title = "http://www.ufl.edu/">
-      <span class = "badge">
-        &nbspUF&nbsp
-      </span>
-    </a>
+      <a href = "#" data-toggle = "tooltip" data-placement = "top" 
+         title = "Credits: 3; Prereq: COP 3504, or COP 3503 and COT 3100.
+  The first part of a two-course sequence that studies the essential 
+  concepts, principles and techniques of modern database systems. 
+  Topics include modeling and querying of data using conceptual data 
+  models as well as the development of a database application.">
+        <i>Database and Information Systems</i>
+      </a>
+      &nbsp&nbsp
+      <a href = "http://www.ufl.edu/" title = "http://www.ufl.edu/">
+        <span class = "badge">
+          &nbspUF&nbsp
+        </span>
+      </a>
 
-    &nbsp&nbsp
-    <a href = "https://www.cise.ufl.edu/academics/undergrad/cse" title = "https://www.cise.ufl.edu/academics/undergrad/cse">
-      <span class = "badge">
-        &nbspCISE&nbsp
-      </span>
-    </a>
-</p>
+      &nbsp&nbsp
+      <a href = "https://www.cise.ufl.edu/academics/undergrad/cse" title = "https://www.cise.ufl.edu/academics/undergrad/cse">
+        <span class = "badge">
+          &nbspCISE&nbsp
+        </span>
+      </a>
+  </p>
+</div>
