--- a/PARTIALS/home_nav_bar.ejs
+++ b/PARTIALS/home_nav_bar.ejs
@@ -1,27 +1,29 @@
-<nav>
-  <ul class = "nav masthead-nav">
-    <li>
-      <a href = "#" data-toggle = "modal" data-target = "#sign_in">
-        Log In
-      </a>
-    </li>
+<div class = "inner">  
+  <nav>
+    <ul class = "nav masthead-nav">
+      <li>
+        <a href = "#" data-toggle = "modal" data-target = "#sign_in">
+          Log In
+        </a>
+      </li>
 
-    <li>
-      <a href = "#" data-toggle = "modal" data-target = "#sign_up">
-        Create Account
-      </a>
-    </li>
+      <li>
+        <a href = "#" data-toggle = "modal" data-target = "#sign_up">
+          Create Account
+        </a>
+      </li>
 
-    <li>
-      <a href = "#" data-toggle = "modal" data-target = "#about">
-        About
-      </a>
-    </li>
+      <li>
+        <a href = "#" data-toggle = "modal" data-target = "#about">
+          About
+        </a>
+      </li>
 
-    <li>
-      <a href = "#" data-toggle = "modal" data-target = "#contact">
-        Contact Us
-      </a>
-    </li>
-  </ul>
-</nav>
+      <li>
+        <a href = "#" data-toggle = "modal" data-target = "#contact">
+          Contact Us
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
