--- a/PARTIALS/modal_contact_us.ejs
+++ b/PARTIALS/modal_contact_us.ejs
@@ -28,15 +28,15 @@
               <div class = "list-group">
 
                 <ul class = "list-group">
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     Undergraduate, UF-CISE
                   </li>
 
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     smith.phillip.m@ufl.edu
                   </li>
 
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     Front-end development, some back-end, general design
                   </li>
                 </ul>
@@ -58,15 +58,15 @@
               <div class = "list-group">
 
                 <ul class = "list-group">
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     Undergraduate, UF-CISE
                   </li>
 
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     email@email.com
                   </li>
 
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     Back-end development, some front-end
                   </li>
                 </ul>
@@ -88,15 +88,15 @@
               <div class = "list-group">
 
                 <ul class = "list-group">
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     BS Graphic Design - Some University
                   </li>
 
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     email@email.com
                   </li>
 
-                  <li class = "list-group-item">
+                  <li class = "list-group-item" id = "contact-list">
                     Contribution: Favicon, general graphic design
                   </li>
                 </ul>
