--- a/PARTIALS/modal_log_in.ejs
+++ b/PARTIALS/modal_log_in.ejs
@@ -13,7 +13,7 @@
       </div><!-- close modal-head -->
 
       <div class = "modal-body"><!-- open modal-body -->                      
-        <form role = "form" action = "login/" method = "post"><!-- open form -->
+        <form role = "form" action = "/login/" method = "post"><!-- open form -->
 
           <div class = "form-group"><!-- email field -->
             <input type = "email" name = "email" class = "form-control input-lg" placeholder = "user@somewhere.com" id = "sign-in-email">
