--- a/PARTIALS/head.ejs
+++ b/PARTIALS/head.ejs
@@ -1,19 +1,21 @@
-<meta charset = "utf-8">
-<meta http-equiv = "X-UA-Compatible" content = "IE = edge">
-<meta name = "viewport" content = "width = device-width, initial-scale = 1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name = "description" content = "cheapLIKEus - Project: CIS4301 Fall 2015">
-<meta name = "author" content = "Phillip Smith and Nicolas Fry">
+<head>
+  <meta charset = "utf-8">
+  <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name = "description" content = "cheapLIKEus - Project: CIS4301 Fall 2015">
+  <meta name = "author" content = "Phillip Smith and Nicolas Fry">
 
-<title>cheapLIKEus</title>
+  <title>cheapLIKEus</title>
 
-<!-- Latest compiled and minified CSS -->
-<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<!-- our CSS -->
-<link rel = "stylesheet" href = "index.css">
+  <!-- Bootstrap -->
+  <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- our CSS -->
+  <link rel = "stylesheet" href = "/index.css">
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
