--- a/PARTIALS/scripts.ejs
+++ b/PARTIALS/scripts.ejs
@@ -4,5 +4,7 @@
 <script src = "https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <!-- Bootstrap -->
 <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<!-- EJS -->
+<script src="ejs_production.js" type="text/javascript"></script>
 <!-- Project JS -->
-<script src = "script" type = "index.js"></script>
+<script src = "/index.js" type = "text/javascript"></script>
