--- a/views/guest.ejs
+++ b/views/guest.ejs
@@ -32,237 +32,42 @@
 
 <html lang = "en">
 
-  <head>
-
-    <meta charset = "utf-8">
-    <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
-    <meta name = "viewport" content = "width = device-width, initial-scale = 1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name = "description" content = "cheapLIKEus - Project: CIS4301 Fall 2015">
-    <meta name = "author" content = "Phillip Smith and Nicolas Fry">
-
-    <title>cheapLIKEus</title>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- our CSS -->
-    <link rel = "stylesheet" href = "guest.css">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-  </head>
+  <!-- Head -->
+  <% include ../PARTIALS/head %>
 
   <body>
 
 <!-- Modals ------------------------------------------------------------------->
 
-  <!-- Modal - Sign-In -->
-    <div class = "modal" id = "sign_in" tabindex = "-1" role = "dialog" aria-labelledby = "sign_in"><!-- open modal -->
-      <div class = "modal-dialog" role = "document">
-        <div class = "modal-content">
+  <!-- Modal - Log In -->
+  <% include ../PARTIALS/modal_log_in %>
 
-          <div class = "modal-header"><!-- open modal-head -->
-
-            <button type = "button" class = "close" data-dismiss = "modal" aria-label = "Close">
-              <span aria-hidden = "true">&times;</span>
-            </button>
-            <h4 class = "modal-title" id = "myModalLabel">Sign-In</h4>
-          
-          </div><!-- close modal-head -->
-
-          <div class = "modal-body"><!-- open modal-body -->                      
-            <form role = "form"><!-- open form -->
-
-              <div class = "form-group"><!-- email field -->
-                <input type = "email" id = "email" class = "form-control input-lg" placeholder = "user@somewhere.com">
-              </div><!-- email field -->
-
-              <div class = "form-group"><!-- password field -->
-               <input type = "password" class = "form-control input-lg" placeholder = "password">
-              </div><!-- password field -->
-
-            </form><!-- close form -->
-          </div><!-- close modal-body -->
-
-          <div class = "modal-footer"><!-- open modal-footer -->
-
-            <button type = "submit" class = "btn btn-default btn-block btn-lg">
-              <b>Submit</b>
-            </button>
-
-          </div><!-- close modal-footer -->
-
-        </div>
-      </div>
-    </div><!-- close modal -->
-
-
-  <!-- Modal - Sign-Up -->
-    <div class = "modal" id = "sign_up" tabindex = "-1" role = "dialog" aria-labelledby = "sign_up"><!-- open modal -->
-      <div class = "modal-dialog" role = "document">
-        <div class = "modal-content">
-
-          <div class = "modal-header"><!-- open modal-head -->
-
-            <button type = "button" class = "close" data-dismiss = "modal" aria-label = "Close"><span aria-hidden = "true">&times;</span></button>
-              <h4 class = "modal-title" id = "myModalLabel">Sign-Up</h4>
-
-          </div><!-- close modal-head -->
-
-          <div class = "modal-body"><!-- open modal-body -->                      
-            <form role = "form"><!-- open form -->
-
-              <div class = "form-group"><!-- password field -->
-                <input type = "name" id = "name" class = "form-control input-lg" placeholder = "Name i.e. John Doe">
-              </div><!-- password field -->
-
-              <br/><br/>
-
-              <div class = "form-group"><!-- email field -->
-                <input type = "email" class = "form-control input-lg" placeholder = "Email i.e. user@somewhere.com">
-              </div><!-- email field -->
-
-              <div class = "form-group"><!-- password field -->
-                <input type = "password" class = "form-control input-lg" placeholder = "password">
-              </div><!-- password field -->
-
-              <br/><br/>
-
-              <div class = "form-group"><!-- password field -->
-                <input type = "street" class = "form-control input-lg" placeholder = "Street address i.e. 123 Main ST">
-              </div><!-- password field -->
-
-              <div class = "form-group"><!-- password field -->
-                <input type = "city" class = "form-control input-lg" placeholder = "City i.e. Gainesville">
-              </div><!-- password field -->
-
-              <div class = "form-group"><!-- password field -->
-                <input type = "state" class = "form-control  input-lg" placeholder = "State i.e. FL">
-              </div><!-- password field -->
-
-              <div class = "form-group"><!-- password field -->
-                <input type = "zip" class = "form-control input-lg" placeholder = "Zip Code i.e. 32608">
-              </div><!-- password field -->
-
-            </form><!-- close form -->
-          </div><!-- close modal-body -->
-
-          <div class = "modal-footer"><!-- open modal-footer -->
-
-            <button type = "submit" class = "btn btn-default btn-block btn-lg">
-              <b>Submit</b>
-            </button>
-
-          </div><!-- close modal-footer -->
-
-        </div>
-      </div>
-    </div><!-- close modal -->
+  <!-- Modal - Create Account -->
+  <% include ../PARTIALS/modal_create_account %>
 
 <!-- Cover -------------------------------------------------------------------->
 
     <div class = "site-wrapper">
-
       <div class = "site-wrapper-inner">
-
         <div class = "cover-container">
 
           <div class = "masthead clearfix">
-            <div class = "inner">
-           
-              <h3 class = "masthead-brand">
-                <a href = "http://walkhard.me/">
-                  <span class="glyphicon glyphicon-home icon" aria-hidden="true"></span>
-                </a>
-              </h3>
-
-              <nav>
-                <ul class = "nav masthead-nav">
-                  <li class = "nav-search">
-                    <div><!-- open search container -->
-                      <div class = "input-group"><!-- open search field -->
-                        <input type = "text" class = "form-control" placeholder = "Search for...">
-
-                        <span class = "input-group-btn">
-                          <button class = "btn btn-default" type = "button">
-                              <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                          </button>
-                        </span>
-
-                      </div><!-- close search field -->
-                    </div><!-- close search container -->
-                  </li>
-
-                  <li>
-                    <a href = "#" data-toggle = "modal" data-target = "#sign_in">
-                      <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                    </a>
-                  </li>
-
-                  <li>
-                    <a href = "#" data-toggle = "modal" data-target = "#sign_up">
-                      <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-
-            </div>
+            <% include ../PARTIALS/guest_nav_bar %>
           </div>
 
           <div class = "inner cover">
-                    <% data.forEach(function(row){ %>
-                      <%= row.ProductID %>
-                      <%= row.name %>
-                      <%= row.price %>
-                      <%= row.stockquantity %>
-                      <%= row.description %>
-                      <% }) %>
+            <% include ../PARTIALS/guest_results %>
           </div>
 
           <div class = "mastfoot">
-            <div class = "inner">
-              <p>
-                Project for 
-
-                  <a href = "#" data-toggle = "tooltip" data-placement = "top" 
-                     title = "Credits: 3; Prereq: COP 3504, or COP 3503 and COT 3100.
-The first part of a two-course sequence that studies the essential 
-concepts, principles and techniques of modern database systems. 
-Topics include modeling and querying of data using conceptual data 
-models as well as the development of a database application.">
-                    <i>Database and Information Systems</i>
-                  </a>
-                  &nbsp&nbsp
-                  <a href = "http://www.ufl.edu/" title = "http://www.ufl.edu/">
-                    <span class = "badge">
-                      &nbspUF&nbsp
-                    </span>
-                  </a>
-
-                  &nbsp&nbsp
-                  <a href = "https://www.cise.ufl.edu/academics/undergrad/cse" title = "https://www.cise.ufl.edu/academics/undergrad/cse">
-                    <span class = "badge">
-                      &nbspCISE&nbsp
-                    </span>
-                  </a>
-              </p>
-            </div>
+              <% include ../PARTIALS/footer %>
           </div>
 
         </div>
       </div>
     </div>
 
-    <script src = "https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!-- Project JS -->
-    <script src = "script" type = "guest.js"></script>
+    <% include ../PARTIALS/scripts %>
 
   </body>
 
