--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,16 +32,14 @@
 
 <html lang = "en">
 
-  <head>
-    <% include ../PARTIALS/head %>
-  </head>
+  <!-- Head -->
+  <% include ../PARTIALS/head %>
 
   <body>
 
 <!-- Modals ------------------------------------------------------------------->
 
   <!-- Modal - Sign-In -->
-
     <% include ../PARTIALS/modal_log_in %>
 
   <!-- Modal - Sign-Up -->
@@ -56,26 +54,19 @@
 <!-- Cover -------------------------------------------------------------------->
 
     <div class = "site-wrapper">
-
       <div class = "site-wrapper-inner">
-
         <div class = "cover-container">
 
           <div class = "masthead clearfix">
-            <div class = "inner">
-              <% include ../PARTIALS/home_nav_bar %>
-            </div>
-
+            <% include ../PARTIALS/home_nav_bar %>
           </div>
 
           <div class = "inner cover">
-              <% include ../PARTIALS/main_search %>
+            <% include ../PARTIALS/main_search %>
           </div>
 
           <div class = "mastfoot">
-            <div class = "inner">
               <% include ../PARTIALS/footer %>
-            </div>
           </div>
 
         </div>
